# translatorAgent

./: README.md  pyproject.toml  source_text.txt
src/translator_agent/: crew.py  main.py
src/translator_agent/config/: agents.yaml  tasks.yaml
