[project]
name = "translator_agent"
version = "0.1.0"
description = "translator_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
translator_agent = "translator_agent.main:run"
run_crew = "translator_agent.main:run"
train = "translator_agent.main:train"
replay = "translator_agent.main:replay"
test = "translator_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
